# Document-Chat-Service

./: .dockerignore  .env.example  .gitignore  BACKEND_EVALUATION_STATE_API_REQUIREMENTS.md  CLAUDE.md  Dockerfile  FOR-AI-CODING-AGENTS.md  LICENSE  RAG_OPTIMIZATION_GUIDE.md  README.md  TESTS_&_REFACTORING_PLAN.md  docker-compose.prod.yml  docker-compose.yml  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  start.ps1  test_context_window_simple.py  test_fastapi.http
.github/workflows/: tests.yml
app/: config.py  main.py  test_rag.py  test_rag_2.py
app/adapters/clustering/: sklearn_clustering.py
app/adapters/document_processing/: remote_document_processor.py  simple_spacy_layout.py  spacy_layout_processor.py  spacy_layout_processor_hosted.py
app/adapters/embedding/: base_embedding.py  ollama_embedding.py
app/api/: deps.py
docs/: AI-AGENT-GUIDE.md  API-REFERENCE.md  DYNAMIC_CONTEXT_WINDOW_DETECTION.md  OLLAMA_PERFORMANCE_OPTIMIZATION.md  OWNERS-MANUAL.md  braindrive_rag_system.md  evaluation-system.md  evaluation-ui.md  plugin-evaluation-integration.md
docs/data-quirks/: 001-git-commit-message-format.md
docs/decisions/: 000-template.md
docs/failures/: 000-template.md  001-race-condition-evaluations.md  002-ollama-ci-test-failures.md  003-pytest-collection-warnings.md
docs/testing/: QUICK_REFERENCE.md  README.md
evaluation_test_docs/: test_cases.json
tests/: conftest.py  test_dynamic_context_window.py
tests/unit/: test_pytest_collection.py
web/templates/: base.html  chat.html  evaluation.html  index.html  search.html
(+96 files in other folders)
