[project]
name = "chat-with-your-documents"
version = "0.1.0"
description = "BrainDrive Chat With Your Documents project"
authors = [
    {name = "Beck Bekmyradov",email = "47065940+bekmuradov@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "chromadb (>=1.0.13,<2.0.0)",
    "spacy-layout (>=0.0.12,<0.0.13)",
    "pandas (>=2.3.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "tiktoken (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false